# video2dataset

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md
converters/: alov_to_yolo_dataset.py
nets/: tracker.caffemodel
sample-dataset/sequence-1/: annotations.ann
src/: alov-dataset-creator.cpp
